--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,35 @@
 services:
-  app:
+  portfolio-dashboard-api:
     build:
       context: .
-      dockerfile: Dockerfile.dev # Use the dev Dockerfile
-    container_name: my-nest-app
+      args:
+        SERVICE: 'main'
     ports:
       - '3000:3000'
-    volumes:
-      - .:/usr/src/app # Mount local files for live reload
-      - /usr/src/app/node_modules # Prevent overwriting node_modules
+    container_name: portfolio-dashboard-api
+    depends_on:
+      - db
+    networks:
+      - portfolio-network
+    command: ['node', 'main.js']
+
+  db:
+    image: postgres:latest
+    container_name: portfolio-db
+    restart: unless-stopped
     environment:
-      - NODE_ENV=development
-    command: npm run start:dev
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
+    ports:
+      - '5432:5432'
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    networks:
+      - portfolio-network
+
+volumes:
+  db-data:
+
+networks:
+  portfolio-network:
