--- a/.github/workflows/deploy-images.yml
+++ b/.github/workflows/deploy-images.yml
@@ -30,8 +30,8 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  APP_NAME: main         # set this to your Amazon ECR repository name
+  AWS_REGION: MY_AWS_REGION
+  APP_NAME: main
 
 permissions:
   id-token: write
@@ -41,30 +41,30 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Build Nest App
-      run:  npm run build ${{env.APP_NAME}}
+      - name: Build Nest App
+        run: npm run build ${{env.APP_NAME}}
 
-    - name: Configure AWS credentials with OIDC
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        role-to-assume: ${{vars.AWS_ROLE }}
+      - name: Configure AWS credentials with OIDC
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{vars.AWS_ROLE }}
+          aws-region: us-east-1
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
-      run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
-        docker build -t ${{ vars.ECR_URI }}:latest .
-        docker push ${{ vars.ECR_URI }}:latest
-        echo "image=${{ vars.ECR_URI }}:latest" >> $GITHUB_OUTPUT
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        run: |
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t ${{ vars.ECR_URI }}:latest .
+          docker push ${{ vars.ECR_URI }}:latest
+          echo "image=${{ vars.ECR_URI }}:latest" >> $GITHUB_OUTPUT
