--- a/.github/workflows/deploy-images.yml
+++ b/.github/workflows/deploy-images.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Dependencies
+        run: npm install -g @nestjs/cli
+
       - name: Build Nest App
         run: npm run build ${{env.APP_NAME}}
 
