--- a/.github/workflows/deploy-images.yml
+++ b/.github/workflows/deploy-images.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: npm install -g @nestjs/cli
+        run: npm install --only=production --omit=dev
 
       - name: Build Nest App
         run: npm run build ${{env.APP_NAME}}
