--- a/.github/workflows/deploy-images.yml
+++ b/.github/workflows/deploy-images.yml
@@ -60,21 +60,28 @@ jobs:
           [ -f .env ] || cp .env.example .env
 
       - name: Configure AWS credentials with OIDC
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{vars.AWS_ROLE }}
           aws-region: us-east-1
+          mask-aws-account-id: 'true'
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          mask-password: 'true'
 
       - name: Build, tag, and push image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ vars.REPOSITORY }}
+          IMAGE_TAG: ${{ github.sha }}
         id: build-image
         run: |
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t ${{ vars.ECR_URI }}:latest --build-arg SERVICE=${{ env.APP_NAME }} .
-          docker push ${{ vars.ECR_URI }}:latest
-          echo "image=${{ vars.ECR_URI }}:latest" >> $GITHUB_OUTPUT
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg SERVICE=${{ env.APP_NAME }} .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          echo "image=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
