--- a/infrastructure/network.yml
+++ b/infrastructure/network.yml
@@ -1,15 +1,29 @@
+AWSTemplateFormatVersion: '2010-09-09'
+
 Parameters:
+  ProjectName:
+    Type: String
+    Description: Project name to link stacks
+    Default: am-i-interested
   CidrBlock:
     Type: String
-    Default: 10.0.0.0/16
+    Default: 10.0.0.0/20
     Description: VPC CIDR block
-  PublicSubnetCidr:
+  PublicSubnet1Cidr:
     Type: String
     Default: 10.0.1.0/24
     Description: Public subnet CIDR block
-  PrivateSubnetCidr:
+  PublicSubnet2Cidr:
     Type: String
     Default: 10.0.2.0/24
+    Description: Public subnet CIDR block
+  PrivateSubnet1Cidr:
+    Type: String
+    Default: 10.0.8.0/24
+    Description: Private subnet CIDR block
+  PrivateSubnet2Cidr:
+    Type: String
+    Default: 10.0.9.0/24
     Description: Private subnet CIDR block
 
 Resources:
@@ -21,32 +35,62 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-MyVpc
+          Value: !Sub ${ProjectName}-VPC
 
-  PublicSubnet:
+  PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      CidrBlock: !Ref PublicSubnetCidr
+      CidrBlock: !Ref PublicSubnet1Cidr
       VpcId: !Ref VPC
+      AvailabilityZone: !Select
+        - 0
+        - Fn::GetAZs: !Ref 'AWS::Region'
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PublicSubnet
+          Value: !Sub ${ProjectName}-PublicSubnet1
 
-  PrivateSubnet:
+  PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
-      CidrBlock: !Ref PrivateSubnetCidr
+      CidrBlock: !Ref PublicSubnet2Cidr
       VpcId: !Ref VPC
+      AvailabilityZone: !Select
+        - 1
+        - Fn::GetAZs: !Ref 'AWS::Region'
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PrivateSubnet
+          Value: !Sub ${ProjectName}-PublicSubnet2
+
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      CidrBlock: !Ref PrivateSubnet1Cidr
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select
+        - 0
+        - Fn::GetAZs: !Ref 'AWS::Region'
+      Tags:
+        - Key: Name
+          Value: !Sub ${ProjectName}-PrivateSubnet1
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      CidrBlock: !Ref PrivateSubnet2Cidr
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select
+        - 1
+        - Fn::GetAZs: !Ref 'AWS::Region'
+      Tags:
+        - Key: Name
+          Value: !Sub ${ProjectName}-PrivateSubnet2
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-MyVpc-InternetGateway
+          Value: !Sub ${ProjectName}-InternetGateway
 
   VpcGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -60,7 +104,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PublicRouteTable
+          Value: !Sub ${ProjectName}-PublicRouteTable
 
   RoutePublicIgw:
     Type: AWS::EC2::Route
@@ -70,67 +114,46 @@ Resources:
       GatewayId: !Ref InternetGateway
       RouteTableId: !Ref RouteTablePublic
 
-  RouteTableAssociationA:
+  PublicRouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref RouteTablePublic
-      SubnetId: !Ref PublicSubnet
+      SubnetId: !Ref PublicSubnet1
+
+  PublicRouteTableAssociation2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref RouteTablePublic
+      SubnetId: !Ref PublicSubnet2
 
   RouteTablePrivate:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref MyVpc
+      VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PrivateRouteTable
+          Value: !Sub ${ProjectName}-PrivateRouteTable
 
-  RouteTableAssociationB:
+  PrivateRouteTableAssociation1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref RouteTablePrivate
-      SubnetId: !Ref PrivateSubnet
+      SubnetId: !Ref PrivateSubnet1
 
-  # Security Groups
-  ECSSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
+  PrivateRouteTableAssociation2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      GroupDescription: Security Group for ECS
-      VpcId: !Ref VPC
-      SecurityGroupIngress: []
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-ECSSecurityGroup
-
-  RDSSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security Group for RDS
-      VpcId: !Ref VPC
-      SecurityGroupIngress: []
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-RDSSecurityGroup
-
-  ALBSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: ALB Security Group
-      VpcId: !Ref VPC
-      SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          Description: Allow HTTP traffic
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-ALBSecurityGroup
-  
+      RouteTableId: !Ref RouteTablePrivate
+      SubnetId: !Ref PrivateSubnet2
 
 Outputs:
   VpcId:
     Value: !Ref VPC
-  PublicSubnet:
-      Value: !Ref PublicSubnet
-  PrivateSubnet:
-      Value: !Ref PrivateSubnet
+  PublicSubnet1Id:
+    Value: !Ref PublicSubnet1
+  PublicSubnet2Id:
+    Value: !Ref PublicSubnet2
+  PrivateSubnet1Id:
+    Value: !Ref PrivateSubnet1
+  PrivateSubnet2Id:
+    Value: !Ref PrivateSubnet2
