Add AWS Cloudformation Deployment file for Devfolio-Network stack

--- a/infra/network.yml
+++ b/infra/network.yml
@@ -1,159 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
-
-Parameters:
-  ProjectName:
-    Type: String
-    Description: Project name to link stacks
-    Default: am-i-interested
-  CidrBlock:
-    Type: String
-    Default: 10.0.0.0/20
-    Description: VPC CIDR block
-  PublicSubnet1Cidr:
-    Type: String
-    Default: 10.0.1.0/24
-    Description: Public subnet CIDR block
-  PublicSubnet2Cidr:
-    Type: String
-    Default: 10.0.2.0/24
-    Description: Public subnet CIDR block
-  PrivateSubnet1Cidr:
-    Type: String
-    Default: 10.0.8.0/24
-    Description: Private subnet CIDR block
-  PrivateSubnet2Cidr:
-    Type: String
-    Default: 10.0.9.0/24
-    Description: Private subnet CIDR block
-
-Resources:
-  VPC:
-    Type: AWS::EC2::VPC
-    Properties:
-      CidrBlock: !Ref CidrBlock
-      EnableDnsSupport: true
-      EnableDnsHostnames: true
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-VPC
-
-  PublicSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      CidrBlock: !Ref PublicSubnet1Cidr
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select
-        - 0
-        - Fn::GetAZs: !Ref 'AWS::Region'
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-PublicSubnet1
-
-  PublicSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      CidrBlock: !Ref PublicSubnet2Cidr
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select
-        - 1
-        - Fn::GetAZs: !Ref 'AWS::Region'
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-PublicSubnet2
-
-  PrivateSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      CidrBlock: !Ref PrivateSubnet1Cidr
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select
-        - 0
-        - Fn::GetAZs: !Ref 'AWS::Region'
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-PrivateSubnet1
-
-  PrivateSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      CidrBlock: !Ref PrivateSubnet2Cidr
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select
-        - 1
-        - Fn::GetAZs: !Ref 'AWS::Region'
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-PrivateSubnet2
-
-  InternetGateway:
-    Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-InternetGateway
-
-  VpcGatewayAttachment:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties:
-      InternetGatewayId: !Ref InternetGateway
-      VpcId: !Ref VPC
-
-  RouteTablePublic:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-PublicRouteTable
-
-  RoutePublicIgw:
-    Type: AWS::EC2::Route
-    DependsOn: VpcGatewayAttachment
-    Properties:
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref InternetGateway
-      RouteTableId: !Ref RouteTablePublic
-
-  PublicRouteTableAssociation1:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref RouteTablePublic
-      SubnetId: !Ref PublicSubnet1
-
-  PublicRouteTableAssociation2:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref RouteTablePublic
-      SubnetId: !Ref PublicSubnet2
-
-  RouteTablePrivate:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub ${ProjectName}-PrivateRouteTable
-
-  PrivateRouteTableAssociation1:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref RouteTablePrivate
-      SubnetId: !Ref PrivateSubnet1
-
-  PrivateRouteTableAssociation2:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref RouteTablePrivate
-      SubnetId: !Ref PrivateSubnet2
-
-Outputs:
-  VpcId:
-    Value: !Ref VPC
-  PublicSubnet1Id:
-    Value: !Ref PublicSubnet1
-  PublicSubnet2Id:
-    Value: !Ref PublicSubnet2
-  PrivateSubnet1Id:
-    Value: !Ref PrivateSubnet1
-  PrivateSubnet2Id:
-    Value: !Ref PrivateSubnet2
+template-file-path: infra/network.yml
+parameters:
+  ProjectName: Devfolio
+tags: {}
