update: change template file path for network configuration and add new service templates

--- a/infra/deploy/network.yml
+++ b/infra/deploy/network.yml
@@ -1,4 +1,4 @@
-template-file-path: infra/network.yml
+template-file-path: infra/templates/network.yml
 parameters:
   ProjectName: Devfolio
 tags: {}
