--- a/infra/deploy/alb.yml
+++ b/infra/deploy/alb.yml
@@ -1,4 +1,4 @@
-template-file-path: infra/network.yml
+template-file-path: infra/templates/alb.yml
 parameters:
   VPC: vpc-020d437435794899e
   Subnet1: subnet-02746d42ba51a1211
