--- a/infra/deploy/alb.yml
+++ b/infra/deploy/alb.yml
@@ -2,5 +2,6 @@ template-file-path: infra/templates/alb.yml
 parameters:
   VPC: vpc-020d437435794899e
   Subnets:
-    Fn::Split: [',', 'subnet-02746d42ba51a1211,subnet-046f1683e3ca6704b']
+    - subnet-02746d42ba51a1211
+    - subnet-046f1683e3ca6704b
 tags: {}
