--- a/infra/deploy/alb.yml
+++ b/infra/deploy/alb.yml
@@ -1,7 +1,7 @@
 template-file-path: infra/templates/alb.yml
 parameters:
   VPC: vpc-020d437435794899e
-  Subnets:
-    - subnet-02746d42ba51a1211
-    - subnet-046f1683e3ca6704b
+  # Subnets:
+  #   - subnet-02746d42ba51a1211
+  #   - subnet-046f1683e3ca6704b
 tags: {}
