update: correct parameter key from 'Parameter' to 'Parameters' in ALB configuration

--- a/infra/templates/alb.yml
+++ b/infra/templates/alb.yml
@@ -1,10 +1,11 @@
-Parameter:
+Parameters:
   VPC:
     Type: "AWS::EC2::VPC::Id"
   Subnet1:
     Type: "AWS::EC2::Subnet::Id"
   Subnet2:
     Type: "AWS::EC2::Subnet::Id"
+
 Resources:
   ApplicationLoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
