--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -17,6 +17,7 @@ Resources:
   Cluster:
       Type: AWS::ECS::Cluster
       Properties:
+        ClusterName: !Sub "${AWS::StackName}-cluster"
         ClusterSettings:
           - Name: containerInsights
             Value: enabled
@@ -56,7 +57,7 @@ Resources:
         UserData:
           Fn::Base64: !Sub |
             #!/bin/bash -xe
-            echo ECS_CLUSTER=${ECSClusterName} >> /etc/ecs/ecs.config
+            echo ECS_CLUSTER=${Cluster} >> /etc/ecs/ecs.config
             yum install -y aws-cfn-bootstrap
             /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource ContainerInstances --region ${AWS::Region} &
 
