update: refactor subnet parameters in ECS configuration to individual references

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -10,8 +10,10 @@ Parameters:
     Default: "10"
   VpcId:
     Type: AWS::EC2::VPC::Id
-  SubnetIds:
-    Type: List<AWS::EC2::Subnet::Id>
+  Subnet1:
+    Type: AWS::EC2::Subnet::Id
+  Subnet2:
+    Type: AWS::EC2::Subnet::Id
 
 Resources:
   Cluster:
@@ -64,7 +66,9 @@ Resources:
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      VPCZoneIdentifier: !Ref SubnetIds
+      VPCZoneIdentifier:
+        - !Ref Subnet1
+        - !Ref Subnet2
       LaunchTemplate:
         LaunchTemplateId: !Ref ContainerInstances
         Version: !GetAtt ContainerInstances.LatestVersionNumber
