--- a/infra/deploy/ecs.yml
+++ b/infra/deploy/ecs.yml
@@ -1,4 +1,4 @@
-template-file-path: infra/templates/alb.yml
+template-file-path: infra/templates/ecs.yml
 parameters:
   VpcId: vpc-020d437435794899e
   # Subnets: [ subnet-02746d42ba51a1211, subnet-046f1683e3ca6704b ]
