--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -14,6 +14,8 @@ Parameters:
     Type: AWS::EC2::Subnet::Id
   Subnet2:
     Type: AWS::EC2::Subnet::Id
+  ImageId:
+    Type: AWS::EC2::Image::Id
 
 Resources:
   Cluster:
