--- a/infra/deploy/auth-service.yml
+++ b/infra/deploy/auth-service.yml
@@ -1,4 +1,19 @@
 template-file-path: infra/network.yml
 parameters:
-  ProjectName: Devfolio
+  ApplicationLoadBalancerListener: arn:aws:elasticloadbalancing:eu-north-1:970547356413:listener/app/Devfolio-ALB-ALB/7bb857da8c8c4928/d2c2829a858ca2a7
+  VPC:
+    Type: String
+    Description: The ID of the VPC in which the ECS cluster is deployed.
+  ECSCluster:
+    Type: String
+    Description: The name of the ECS cluster.
+  ImageRepository:
+    Type: String
+    Description: The URI of the ECR repository for the auth service.
+  TaskExecutionRole:
+    Type: String
+    Description: The ARN of the task execution role for the auth service.
+  PathPattern: /auth/*
+  ServiceName: auth-service
+  ListenerPriority: 1
 tags: {}
