update: change RouteTable parameter type from AWS::EC2::RouteTable::Id to String in database.yml

--- a/infra/templates/database.yml
+++ b/infra/templates/database.yml
@@ -18,7 +18,7 @@ Parameters:
     AllowedValues: ["true", "false"]
     Default: "false"
   RouteTable:
-    Type: AWS::EC2::RouteTable::Id
+    Type: String
     Default: "false"
   Subnet1Cidr:
     Type: String
