--- a/infra/deploy/database.yml
+++ b/infra/deploy/database.yml
@@ -2,8 +2,8 @@ template-file-path: infra/templates/database.yml
 parameters:
   VPC: vpc-020d437435794899e
   DBInstanceIdentifier: "devfolio-db-id"
-  DBEngine: postgres
-  DBVersion: "17.4-R1"
+  DBEngine: postgresql
+  DBVersion: "17.4"
   ECSSecurityGroup: sg-051ccb6bf6069f98a
   RouteTable: rtb-0eb493fab61e079b3
 tags: {}
