--- a/infra/deploy/dashboard-service.yml
+++ b/infra/deploy/dashboard-service.yml
@@ -3,7 +3,7 @@ parameters:
   VPC: vpc-020d437435794899e
   DBInstanceIdentifier: "devfolio-db-id"
   DBEngine: postgres
-  DBVersion: "15.3"
+  DBVersion: 15.3
   ECSSecurityGroup: sg-051ccb6bf6069f98a
   RouteTable: rtb-0eb493fab61e079b3
 tags: {}
