update: refactor deployment workflows for auth and dashboard services

--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -16,7 +16,7 @@ jobs:
   deploy-dashboard:
     uses: ./.github/workflows/deploy-template.yml
     with:
-      APP_NAME: main
+      APP_NAME: auth
     secrets:
       AWS_ROLE: ${{ secrets.AWS_ROLE }}
       REPOSITORY: devfolio/auth
