--- a/infra/deploy/dashboard-service.yml
+++ b/infra/deploy/dashboard-service.yml
@@ -1,9 +1,10 @@
-template-file-path: infra/network.yml
+template-file-path: infra/service.yml
 parameters:
+  ApplicationLoadBalancerListener: arn:aws:elasticloadbalancing:eu-north-1:970547356413:listener/app/Devfolio-ALB-ALB/7bb857da8c8c4928/d2c2829a858ca2a7
   VPC: vpc-020d437435794899e
-  DBInstanceIdentifier: "devfolio-db-id"
-  DBEngine: postgres
-  DBVersion: 15.3
-  ECSSecurityGroup: sg-051ccb6bf6069f98a
-  RouteTable: rtb-0eb493fab61e079b3
+  ECSCluster: Devfolio-ECS-cluster
+  ImageRepository: 970547356413.dkr.ecr.eu-north-1.amazonaws.com/devfolio/dashboard
+  PathPattern: /dashboard/*
+  ServiceName: dashboard-service
+  ListenerPriority: 2
 tags: {}
